<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoincheBoard</string>
    <string name="action_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="numberOfPlayers">Number of players</string>
    <string name="players3">3 players</string>
    <string name="players4">4 Players</string>
    <string name="playerNorth">Player north</string>
    <string name="playerWest">Player west</string>
    <string name="playerSouth">Player south</string>
    <string name="playerEast">Player east</string>
    <string name="playerNorthName">Player north name</string>
    <string name="playerWestName">Player west name</string>
    <string name="playerSouthName">Player south name</string>
    <string name="playerEastName">Player east name</string>
    <string name="teams">Teams</string>
    <string name="dealer">Dealer</string>
    <string name="startGame">Start game</string>
    <string name="title_activity_score_board">ScoreBoard</string>
    <string name="teamOne">Team one</string>
    <string name="teamTwo">Team two</string>
    <string name="teamThree">Team three</string>
    <string name="spade">Spade</string>
    <string name="heart">Heart</string>
    <string name="club">Club</string>
    <string name="square">Square</string>
    <string name="skip">Skip</string>
    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="title_activity_mise_fragment">MiseFragment</string>
    <string name="title_activity_play_fragment">PlayFragment</string>
    <string name="teamOneScore">%1$s\'s score</string>
    <string name="teamOneBonus">%1$s\'s bonus</string>
    <string name="teamTwoScore">%1$s\'s score</string>
    <string name="teamTwoBonus">%1$s\'s bonus</string>
    <string name="teamThreeScore">%1$s\'s score</string>
    <string name="teamThreeBonus">%1$s\'s bonus</string>
    <string name="valid">Valid</string>
    <string name="dogScore">Dog score</string>
    <string name="coinche">Coinche</string>
    <string name="surCoinche">Sur-coinche</string>
    <string name="title_activity_coinche_dialog">CoincheDialog</string>
    <string name="askCoincheTeam">Select the team that perform the coinche ?</string>
    <string name="belote">Belote</string>
    <string name="quitMessage">Do you want to quit the current game ?</string>
    <string name="yesMessage">Yes</string>
    <string name="noMessage">No</string>

</resources>