<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewGameActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/teamOneBonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberOfPlayers" />

        <RadioGroup
            android:id="@+id/groupRadioPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio3Players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:text="@string/players3" />

            <RadioButton
                android:id="@+id/radio4Players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:checked="true"
                android:text="@string/players4" />
        </RadioGroup>

        <TextView
            android:id="@+id/playerNorth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playerNorth" />

        <EditText
            android:id="@+id/playerNorthName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/playerNorthName"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/playerWest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playerWest" />

        <EditText
            android:id="@+id/playerWestName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/playerWestName"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/playerSouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playerSouth" />

        <EditText
            android:id="@+id/playerSouthName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/playerSouthName"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/playerEast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playerEast" />

        <EditText
            android:id="@+id/playerEastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/playerEastName"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dealer" />

        <Spinner
            android:id="@+id/dealerSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/validButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="startGame"
            android:text="@string/startGame" />

    </LinearLayout>

</ScrollView>