<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CoincheDialog" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/askCoincheTeam" />

    <RadioGroup
        android:id="@+id/groupCoinche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioCoincheOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamOne" />

        <RadioButton
            android:id="@+id/radioCoincheTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamTwo" />

        <RadioButton
            android:id="@+id/radioCoincheThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teamThree" />

    </RadioGroup>

</LinearLayout>